# shell_challenges

./: README.md
challenges/: challenge_1.md  challenge_2.md  challenge_3.md
challenges/fleet-server/: CMakeLists.txt
challenges/fleet-server/include/config/: config.hpp
challenges/fleet-server/include/server/: interceptors.hpp  server.hpp
challenges/fleet-server/include/service/: service.hpp
challenges/fleet-server/protos/: fleet.proto
challenges/fleet-server/scripts/: proto-gen.sh
challenges/fleet-server/src/: client.cpp  main.cpp
challenges/fleet-server/src/server/: server.cpp
challenges/fleet-server/src/service/: service.cpp
